@@ -1,5 +1,6 @@
 Version 0.6.1 -
 ----------------------------
+- New: added possibility to specify whether column is sortable or not by 'sortable'=>true
 - Fix: in rendering sortable columns
 
 
